RbA Build/src/objects/MA_Scheduler_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Resource_Id__c</fullName>
        <label>Resource Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Settings__c</fullName>
        <label>Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Store_Id__c</fullName>
        <label>Store Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>MA Scheduler Settings</label>
    <nameField>
        <displayFormat>MASS - {000000}</displayFormat>
        <label>MA Scheduler Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MA Scheduler Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>